adding a file for the pork belly recipe

--- a/recipe_page/pork_belly.html
+++ b/recipe_page/pork_belly.html
@@ -10,5 +10,52 @@
     <h1>
         recipe for fried pork belly
     </h1>
+    <img src="../images/porkbelly.jpg" alt="porkbelly"> 
+    <p>
+        Pork belly is a fatty piece of meat that is often used 
+        to make bacon and pancetta. However, it can also be roasted, 
+        resulting in flavorful and tender pork covered with delicious
+        crackling. It's that dual texture (often in a single bite) 
+        that makes it irresistible and guaranteed to please 
+        everyone at the dinner table.
+
+    </p>
+    <h2>
+        Here is the recipe/ingredients:
+    </h2>
+    <ul>
+        <li>2 pounds pork belly with skin</li>
+        <li>3/4 teaspoon of kosher salt</li>
+        <li>1/2 teaspoon freshly grounded black pepper</li>
+        <li>1-2 tablespoon of extra-virgin olive oil</li>
+    </ul>
+    <h3>
+        Here are the steps in making the best slow roasted pork belly 
+        you will ever taste!
+    </h3>
+    <ol>
+        <li>Gather the ingredients</li>
+        <img src="../images/gathering.jpg">
+        <li>Heat the oven to 350 F/180 C. Place the rack on a 
+            rimmed baking sheet. With a sharp knife, make several 
+            parallel cuts across the skin of the pork belly, 
+            1/4 to 1/2-inch apart. Cut through the skin and 
+            fat but not into the meat.</li>
+        <img src="../images/2ndstep.jpg">
+        <li>Sprinkle the pork all over with kosher salt and freshly 
+            ground black pepper. 
+            Drizzle with olive oil and rub it all into the pork.</li>
+        <img src="../images/3rdstep.jpg">
+        <li>Place the pork on the rack, skin-side up</li>
+        <img src="../images/4thstep.jpg">
+        <li>Roast for 2 to 2 1/2 hours or until the meat is very tender and 
+            falling apart. Increase the heat to 425 F and 
+            roast for 20 to 25 minutes longer to crisp the skin even more.</li>
+        <img src="../images/5thstep.jpg">
+        <li>Remove the pork from the oven and let it rest for 10 mins before
+            slicing. Enjoy your treat!
+        </li>
+        <img src="../images/laststep.jpg">
+    </ol>
 </body>
 </html>
