adding my index file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Odin Recipes!</title>
 </head>
 <body>
+    <h1>
+        My first ODIN project: odin-recipe
+    </h1>
+    <img src="images/odinproject1.jpeg" alt="my first odin project picture">
+    <h1>
     <a href="recipe_page/pork_belly.html"><strong>click here for the 
         famous fried pork belly recipe!
     </strong></a>
+    </h1>
 </body>
 </html>
