--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <h1>
         My first ODIN project: odin-recipe
     </h1>
-    <img src="images/odinproject1.jpeg" alt="my first odin project picture">
-    <h1>
-    <a href="recipe_page/pork_belly.html"><strong>click here for the 
-        famous fried pork belly recipe!
-    </strong></a>
+    <img src="images/dogmeme.jpeg" alt="my first odin project picture">
+    <h1> Choose your favourite food from the list below, smile 
+        and start cookin' !!
+        <ul>
+            <li>
+            <a href="recipe_page/pork_belly.html"><strong> 
+            famous fried pork belly recipe!
+            </strong></a>
+            </li>
+        </ul>
     </h1>
 </body>
 </html>
