--- a/recipe_page/pork_belly.html
+++ b/recipe_page/pork_belly.html
@@ -53,9 +53,16 @@
             roast for 20 to 25 minutes longer to crisp the skin even more.</li>
         <img src="../images/5thstep.jpg">
         <li>Remove the pork from the oven and let it rest for 10 mins before
-            slicing. Enjoy your treat!
+            slicing. 
         </li>
         <img src="../images/laststep.jpg">
+        <h1>
+            Enjoy your treat! 
+        </h1>
+        
+        <h1>
+            <a href="../index.html"> Back to Homepage</a>
+        </h1>
     </ol>
 </body>
 </html>
