added second page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             famous fried pork belly recipe!
             </strong></a>
             </li>
+            <li>
+                <a href="recipe_page/british_breakfast.html"><strong> 
+                Make yourself the BEST british breakfast !
+                </strong></a>
+                </li>
         </ul>
     </h1>
 </body>
