--- a/recipe_page/british_breakfast.html
+++ b/recipe_page/british_breakfast.html
@@ -7,6 +7,55 @@
     <title>british breakfast</title>
 </head>
 <body>
-    
+    <h1>Recipe to having the BEST british breakfast!</h1>
+    <img src="../images/headingpic.jpeg">
+    <p>Sometimes called a fry up, a full English is a hearty, 
+        hefty breakfast plate served in the UK and Ireland. Full English 
+        breakfasts are so popular that they’re pretty much offered throughout 
+        the day as all-day breakfast. Full English breakfasts contain: sausages, 
+        back bacon, eggs, tomatoes, mushrooms, fried bread, and beans.
+    </p>
+    <h2>Here is the recipe/ingredients</h2>
+    <ul>
+        <li>1 can beans Heinz preferred</li>
+        <li>4 links sausages breakfast sausage preferred</li>
+        <li>4 slices back bacon or Irish bacon</li>
+        <li>4 slices black pudding optional... some say</li>
+        <li>1 cup mushrooms halved or sliced</li>
+        <li>2 small tomatoes halved</li>
+        <li>4 slices bread</li>
+        <li>4 eggs</li>
+    </ul>
+    <h2>Instructions in making the BEST british breakfast:</h2>
+    <ol>
+        <li>Heat up the beans over low heat in a small pot or in 
+            the can itself, and keep it running on warm.
+        </li>
+        <img src="../images/beans.jpeg">
+        <li>Cook the sausages over medium to medium low heat, turning occasionally, 
+            until brown and cooked through. In the same pan, cook the bacon, 
+            flipping as needed. Fry the blood 
+            pudding slices over medium heat for 3-4 minutes per side.
+        </li>
+        <img src="../images/cookmeat.jpeg">
+        <li>
+            In another pan, heat up a bit of oil and cook the mushrooms, 
+            without moving, until brown and caramelized. Remove from the pan, 
+            then sear the cut side of the tomato briefly.
+             Remove from the pan, season everything with salt and pepper.
+        </li>
+        <img src="../images/cookvege.jpeg">
+        <li>Lastly... Wipe the pan down and heat up a bit of oil or 
+            butter over medium heat. Fry the bread until golden, 
+            flipping and adding more oil or butter as needed. Remove and set aside. 
+            Finally, fry the eggs to your liking. Plate everything up: sausages, 
+            bacon, black pudding, mushrooms, tomato, bread, and eggs. 
+            
+        </li>
+        <img src="../images/fullenglishbreakfast.jpeg">
+    </ol>
+    <h1>Enjoy immediately!</h1>
+    <a href="../index.html">Back to Homepage</a>
+    <p>Original Authors: <a href="https://iamafoodblog.com/a-breakdown-of-the-full-english-breakfast/">iamafoodblog.com</a></p>
 </body>
 </html>
