--- a/recipe_page/pork_belly.html
+++ b/recipe_page/pork_belly.html
@@ -21,7 +21,7 @@
 
     </p>
     <h2>
-        Here is the recipe/ingredients:
+        Here are the recipe/ingredients:
     </h2>
     <ul>
         <li>2 pounds pork belly with skin</li>
@@ -56,13 +56,14 @@
             slicing. 
         </li>
         <img src="../images/laststep.jpg">
-        <h1>
-            Enjoy your treat! 
-        </h1>
-        
-        <h1>
-            <a href="../index.html"> Back to Homepage</a>
-        </h1>
     </ol>
+    <h1>
+        Enjoy your treat! 
+    </h1> 
+    <a href="../index.html"> Back to Homepage</a>
+    
+    <p>Original Authors: <a href="https://www.thespruceeats.com/slow-roasted-pork-belly-crispy-skin-3059509
+        ">thespruceeats.com</a>
+    </p>
 </body>
 </html>
