finished my first project!

--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
         and start cookin' !!
         <ul>
             <li>
+                Try out the
             <a href="recipe_page/pork_belly.html"><strong> 
             famous fried pork belly recipe!
             </strong></a>
             </li>
             <li>
+                Make yourself the
                 <a href="recipe_page/british_breakfast.html"><strong> 
-                Make yourself the BEST british breakfast !
+                 BEST british breakfast !
                 </strong></a>
-                </li>
+            </li>
+            <li>
+                Mexico is in town baby! Let's try out this wonderful 
+                <a href="recipe_page/porkchop.html"><strong> 
+                    pork chop tacos
+                </strong></a>
+            </li>
         </ul>
     </h1>
 </body>
